# spm_project

./: CMakeLists.txt  README.md  TEMPI_EXEC.docx  [MODIFICA]main_all_double_copy.cpp  [NO]oh_th.cpp  ese_jac.cpp  execute.sh  log.txt  main.out  main_2_giac.cpp  main_all.cpp  main_all.out  main_all_double.cpp  main_all_double.out  main_ff.cpp  main_ff.out  main_seq.cpp  main_seq.out  main_th.cpp  main_th.out  mat_int.cpp  mioheader.cpp  mioheader.h  mioheader.hpp  mioprova.cpp  mioprova.out  nouse_support.cpp  ripetizione.cpp  ripetizione.out  seq_rand.cpp  seq_rand_test.cpp  standardlib.cpp  standardlib.out  template.cpp  util.cpp  util.hpp  utimer.cpp  vuoto  ~$MPI_EXEC.docx
0.recap/: misuraTempi.cpp  misuraTempi.out  ripetizione.cpp  standardlib.cpp  standardlib.out  template.cpp
1.concurrency/: barriere.cpp  barriere.out  racap_thread.out  recap_thread.cpp
2.test/: mioheader.cpp  mioheader.hpp  mioprova.cpp  mioprova.out
5.thread/: main_th.cpp  oh_th.cpp  util.cpp  util.hpp
6.ff/: main_ff.out
ff/: main_ff.cpp  main_ff.out  util.cpp
recap/: ripetizione.cpp  ripetizione.out  standardlib.out
seq/: main_seq.cpp  main_seq.out
thread/: main_th.cpp  main_th.out
